mydata/beast/beast-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: beast
  namespace: beast
spec:
  selector:
    app: beast
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
